<resources>
    <string name="app_name">MEMAnalyzer</string>
    <string name="definition">  MEMAnalyzer - a questionnaire that determines your sense of humor</string>
    <string name="description">  Sometimes it makes sense to apply subtle and indirect approaches to testing personal qualities. One of these methods is to study a persons reaction to various types of jokes. Psychoanalysts have long agreed that humor is a kind of window into the "inner recesses" of consciousness, and psychologists in their research have confirmed the existence of a real connection between what kind of humor a person likes and his personality type.</string>
    <string name="button_start">start</string>
    <string name="button_search">search</string>
    <string name="button_restart">restart</string>
    <string name="button_get">GET Statistics</string>
    <string name="button_signIn">sign in</string>
    <string name="button_exit">exit</string>
    <string name="thirty_second">Thirty seconds left</string>
    <string name="one_minute">One minute left</string>
    <string name="very_fun">It is very funny</string>
    <string name="pretty_fun">It is pretty funny</string>
    <string name="little_fun">Little bit of fun</string>
    <string name="so_so">So so</string>
    <string name="not_fun">Not funny at all</string>
    <string name="finish">finish</string>
    <string name="category_everyday_life">Everyday life</string>
    <string name="category_conservative">Conservative</string>
    <string name="category_popularity">Popularity</string>
    <string name="category_meaninglessness">Meaninglessness</string>
    <string name="category_pointless">Pointless</string>
    <string name="category_negation">Negation</string>
    <string name="category_unpretentiousness">Unpretentiousness</string>
    <string name="category_intelligence">Intelligence</string>
    <string name="category_intelligen">Intelligen</string>
    <string name="description_of_all_categories">Description of all categories</string>
    <string name="all_categories">\n\n
        Everyday life\n\nYou prefer a stable and calm lifestyle, everyday life does not disgust you. You strongly appreciate material well-being and support the standard foundations of society such as the institution of the family or a religion typical for the region of residence. You can be a good friend and an important member of the company. Most likely your character, habits and manners were laid down for you from childhood by your parents.\n\n
        Conservative\n\nYou are a person who respects established things and events, you have a negative attitude towards any innovations and you are afraid of changes in your lifestyle. You are uncomfortable in a new company and make new acquaintances. You try to hold on to people you have known for a long time, respect the archaic foundations of society, focus on opinions of more experienced people and always know exactly what you want. You do not get bored with old, familiar actions and things.\n\n
        Popularity\n\nYou are a person open to innovations, new trends and customs, you quickly adapt to changes in your life and enjoy it. You like to make new acquaintances and you will always find how to keep up a conversation with the company. Your opinion can often change and depend on the person who is authoritative for you. Attention and material condition in life are very important to you.\n\n
        Meaninglessness\n\nYou have a non-standard mindset, most likely you consider a few acquaintances as your friends. You prefer calmness and solitude to noisy companies. You tend to notice in other people what the majority does not notice in them, as well as to face misunderstanding on the part of the majority. You are engaged in and are interested in one business for a long time and you do not really care about what people think about you.\n\n
        Intelligence\n\nYou are a rather intelligent, sensible person who tends to consider yourself smarter than many others. Most likely, your main activity is associated with mental stress, you like solving problems by finding a logical way to solve them. You prefer to deeply understand the issues that interest you and make acquaintances according to a common circle of interests. Material values in life do not play a key role for you.\n\n
    </string>
    <string name="exit_msg">Do you want to exit?</string>
    <string name="statistics_msg">When downloading statistics an error occurred, try again later</string>
    <string name="no_data_msg">There is no data for the selected filters</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="not_answer_all">You did not answer all the questions</string>
    <string name="successfully_blocked">the user was successfully blocked</string>
    <string name="time_expired">Testing time expired.You can start the test over</string>
    <string name="login">Login</string>
    <string name="login_reg">Login*</string>
    <string name="full_name">Full name*</string>
    <string name="email">E-mail*</string>
    <string name="dateOfBirth">Date of birth*</string>
    <string name="Gender">Gender*</string>
    <string name="Role">Role*</string>
    <string name="all_gender">All gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password</string>
    <string name="password_reg">Password*</string>
    <string name="repeat_password_reg">Repeat password*</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="testing_rules">
        The test consists drawings selected from the Internet. The task is as follows: view all the drawings in order of their order and quickly decide on each of them how funny you think it is. Drawings should be evaluated on a 5-point scale.\n\nYou can start the test after downloading.\n\n
    </string>
    <string name="emptyField">This field must not be empty</string>
    <string name="unauthorized">Check the entered data</string>
    <string name="locked">This user was blocked</string>
    <string name="data_not_unique">The login or email address is not unique. You may already be registered</string>
    <string name="authorization_error">An error occurred during authorization, please check the entered data or try again later</string>
    <string name="registration_error">An error occurred during registration, please check the entered data or try again later</string>
    <string name="gender_not_valid">You must choose your gender</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="passwords_length">The password must be more than 8 characters</string>
    <string name="passwords_symbols">The password must contain large and small Latin letters</string>
    <string name="passwords_numbers">The password must contain numbers</string>
    <string name="passwords_sign">The password must contain an @, ! or _</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="user_name_not_valid">The username is too short, it must be more than 5 characters</string>
    <string name="full_name_not_valid">The full name is too short, it must be more than 10 characters</string>
    <string name="edit">Edit profile</string>
    <string name="block">block</string>
    <string name="save">Save</string>
    <string name="start_test">start test</string>
    <string name="all_users">Users</string>
    <string name="statistics">Statistics</string>
    <string name="users">Users</string>
    <string name="not_test">You do not have any test results yet. Please start the test</string>
    <string name="user_not_test">User do not have any test results yet.</string>
    <string name="unlogin">Are you sure you want to exit the account?</string>
    <string name="details">Details</string>
    <string name="time_range">Time range</string>
    <string name="start_age">Start age</string>
    <string name="end_age">End age</string>
    <string name="enter">Enter some text...</string>
</resources>