<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            style="@style/Widget.MEMAnalyzer.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:title="@string/app_name">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/logIn"
                style="@style/Widget.MEMAnalyzer.Button.ImgButton"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="210sp"
                app:icon="@drawable/ic_login_24px" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_android_black"
                />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/definition"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textColor="?android:attr/textColorPrimary"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginBottom="40sp"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exit_button"
                    style="@style/Widget.MEMAnalyzer.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/button_exit" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start_button"
                    style="@style/Widget.MEMAnalyzer.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/button_start" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>