<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            style="@style/Widget.MEMAnalyzer.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_marginTop="56dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            >
            <TextView
                android:id="@+id/numberOfQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/0"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <Chronometer
                android:id="@+id/timer"
                tools:targetApi="24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            >
            <ImageView
                android:id="@+id/mem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:minHeight="270sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:orientation="vertical"
            >
            <RadioGroup
                android:id="@+id/radioGroup"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/very_fun"
                    android:textSize="20sp"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pretty_fun"
                    android:textSize="20sp"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/little_fun"
                    android:textSize="20sp"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_button_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/so_so"
                    android:textSize="20sp"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_button_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/not_fun"
                    android:textSize="20sp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20sp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MEMAnalyzer.Button.FloatingActionButton"
                app:srcCompat="@drawable/ic_baseline_chevron_left_24"
                tools:ignore="VectorDrawableCompat" />


            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                style="@style/Widget.MEMAnalyzer.Button.TextButton"
                android:layout_marginRight="30sp"
                android:layout_marginLeft="30sp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MEMAnalyzer.Button.FloatingActionButton"
                app:srcCompat="@drawable/ic_baseline_chevron_right_24"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>